Fix back to top button z-index to work over footer

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -169,6 +169,7 @@ a.remove-item > span.badge:hover,
     position: fixed;
     bottom: 25px;
     right: 10px;
+    z-index: 9999999;
 }
 
 .btt-link {
